--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "naive-ui": "^2.41.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
     "typescript": "~5.7.3",
