--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -35,6 +36,8 @@
     "naive-ui": "^2.41.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
